# autosaxs-saxs-ml-data-code

./: .gitignore  .zenodo.json  CITATION.cff  DATA_AND_CODE_AVAILABILITY.md  LICENSE  MANIFEST.tsv  MANUSCRIPT_DATA_AND_CODE_AVAILABILITY_DRAFT.md  ML_PROTOCOL.md  NOTICE.md  README.md  REPRESENTATIVE_SAXS_PROFILES.md  pyproject.toml
configs/: analysis.default.yaml  analysis.strict.yaml  ml.default.yaml  sample_rules.yaml
constants/: __init__.py  paths.py  plotting.py  thresholds.py
example_oligomer_outputs/: ML_targets_crystal_oligo.xlsx  oligomer_summary.xlsx
legacy_reference_scripts/: pipeline_scripts__step1_5_phase_diagram.py.txt  pipeline_scripts__step1_pseudo_rg.py.txt  pipeline_scripts__step2_crystal_features.py.txt  pipeline_scripts__step3_ffmaker.py.txt  pipeline_scripts__step4_fit_plots.py.txt  selected_for_ML__Step1.5 phase_diagram_heatmap.py.txt  selected_for_ML__Step1_pseudo_rg_v4_group3_offset_SIFig_PATCHED.py.txt  selected_for_ML__Step2_crystalFeatures_v4_CI_gated_ds_mosaic_v4_compact.py.txt  selected_for_ML__Step3_FFmaker_Oligo_v9.py.txt  selected_for_ML__Step4 for fitting plot_v3.py.txt
metadata/: README.md  experiment_map.csv  labels.csv  sample_manifest.csv
oligomer_basis/: ff_columns_map.txt
pipeline_scripts/: __init__.py
scripts/: export_heatmap_csvs.py  generate_analysis_charts.py  generate_heatmap.py  generate_heatmap_ci.py  generate_heatmap_ci_gb.py  organize_outputs.py  run_advanced_analysis.py  run_analysis.py  run_analysis_optimized.py  run_analysis_rigorous.py  run_augmentation_test.py  run_extended_analysis.py  (+2 more)
(+57 files in other folders)
